--- a/app/src/main/res/layout/list_item_home.xml
+++ b/app/src/main/res/layout/list_item_home.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical" >
@@ -10,7 +11,8 @@
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:background="@drawable/list_item_bg_selector"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        tools:ignore="UselessParent">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -22,7 +24,9 @@
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:layout_margin="8dp"
-                android:src="@drawable/ic_default" />
+                android:src="@drawable/ic_default"
+                android:contentDescription=""
+                tools:ignore="ContentDescription" />
 
             <TextView
                 android:id="@+id/tv_name"
@@ -32,7 +36,8 @@
                 android:singleLine="true"
                 android:text="京东"
                 android:textColor="#000"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                tools:ignore="Deprecated,HardcodedText,RtlHardcoded" />
 
             <RatingBar
                 android:id="@+id/rb_star"
@@ -43,7 +48,8 @@
                 android:layout_toRightOf="@id/iv_icon"
                 android:isIndicator="true"
                 android:progressDrawable="@drawable/custom_ratingbar"
-                android:rating="5" />
+                android:rating="5"
+                tools:ignore="RtlHardcoded" />
 
             <TextView
                 android:id="@+id/tv_size"
@@ -51,10 +57,11 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/rb_star"
                 android:layout_toRightOf="@id/iv_icon"
-                android:singleLine="true"
                 android:text="@string/_1000"
                 android:textColor="#9e9e9e"
-                android:textSize="15sp" />
+                android:textSize="15sp"
+                android:maxLines="1"
+                tools:ignore="RtlHardcoded" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -63,7 +70,8 @@
                 android:layout_centerVertical="true"
                 android:layout_marginRight="10dp"
                 android:gravity="center"
-                android:orientation="vertical" >
+                android:orientation="vertical"
+                tools:ignore="RtlHardcoded">
 
                 <FrameLayout
                     android:id="@+id/fl_download"
@@ -91,10 +99,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="5dp"
-            android:singleLine="true"
             android:text="京东是中国最大的巴拉巴拉巴拉巴拉巴拉巴拉拉巴拉拉巴拉拉拉巴拉拉巴拉拉不拉了"
             android:textColor="#9e9e9e"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:maxLines="1" />
     </LinearLayout>
 
 </LinearLayout>
