--- a/app/src/main/res/layout/list_item_subject.xml
+++ b/app/src/main/res/layout/list_item_subject.xml
@@ -1,25 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+
+    xmlns:googlePlay="http://schemas.android.com/apk/res-auto"
+
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="5dp"
     android:layout_marginRight="5dp"
     android:background="@drawable/list_item_bg_selector"
-    >
+    android:orientation="vertical"
+    android:paddingBottom="10dp">
 
-    <ImageView
-        android:background="@drawable/subject_default"
-        android:id="@+id/iv_pic"
+    <com.im_dsd.googlepaly.ui.view.RatioLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        googlePlay:ratio="2.43">
+
+        <ImageView
+            android:id="@+id/iv_pic"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/subject_default" />
+
+    </com.im_dsd.googlepaly.ui.view.RatioLayout>
+
 
     <TextView
         android:id="@+id/tv_des"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingBottom="3dp"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
-        android:paddingBottom="3dp"
         android:singleLine="true"
         android:text="哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈"
         android:textColor="#000"
