--- a/app/src/main/res/layout/list_item_subject.xml
+++ b/app/src/main/res/layout/list_item_subject.xml
@@ -1,25 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
     xmlns:googlePlay="http://schemas.android.com/apk/res-auto"
-
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="5dp"
     android:layout_marginRight="5dp"
     android:background="@drawable/list_item_bg_selector"
-    android:orientation="vertical"
-    android:paddingBottom="10dp">
+    android:orientation="vertical">
 
     <com.im_dsd.googlepaly.ui.view.RatioLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        googlePlay:ratio="2.43">
+        googlePlay:ratio="2.43"
+        android:padding="5dp"
+        android:scaleType="fitXY">
 
         <ImageView
             android:id="@+id/iv_pic"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:background="@drawable/subject_default" />
 
     </com.im_dsd.googlepaly.ui.view.RatioLayout>
