--- a/app/src/main/res/layout/holder_load_more.xml
+++ b/app/src/main/res/layout/holder_load_more.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical" >
@@ -23,7 +24,9 @@
             android:layout_marginLeft="5dp"
             android:text="正在加载..."
             android:textColor="#000"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            tools:ignore="HardcodedText,RtlHardcoded"
+           />
     </LinearLayout>
 
     <TextView
@@ -34,6 +37,7 @@
         android:padding="10dp"
         android:text="加载失败,点击重试"
         android:textColor="#000"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        tools:ignore="HardcodedText" />
 
 </LinearLayout>
