--- a/app/src/main/res/layout/list_item_home.xml
+++ b/app/src/main/res/layout/list_item_home.xml
@@ -73,18 +73,27 @@
                 android:orientation="vertical"
                 tools:ignore="RtlHardcoded">
 
-                <FrameLayout
-                    android:id="@+id/fl_download"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:id="@+id/tv_download"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="下载"
-                    android:textColor="#000"
-                    android:textSize="16sp" />
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:gravity="center"
+                    android:orientation="vertical" >
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/ic_download" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="3dp"
+                        android:text="下载"
+                        android:textColor="#000"
+                        android:textSize="18sp" />
+                </LinearLayout>
             </LinearLayout>
         </RelativeLayout>
 
