--- a/app/src/main/res/layout/layout_detail_desinfo.xml
+++ b/app/src/main/res/layout/layout_detail_desinfo.xml
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:src="@drawable/arrow_down" />
+            android:background="@drawable/arrow_down" />
     </RelativeLayout>
 
 </LinearLayout>
