--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,22 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawerlayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.activity.MainActivity"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <com.im_dsd.googlepaly.ui.view.PagerTab
-        android:id="@+id/pt_indicator"
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context=".ui.activity.MainActivity">
 
-    </com.im_dsd.googlepaly.ui.view.PagerTab>
+        <com.im_dsd.googlepaly.ui.view.PagerTab
+            android:id="@+id/pt_indicator"
+            android:layout_width="match_parent"
+            android:layout_height="50dp">
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/vp_fragments_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        </com.im_dsd.googlepaly.ui.view.PagerTab>
 
-    </android.support.v4.view.ViewPager>
-</LinearLayout>
+        <android.support.v4.view.ViewPager
+            android:id="@+id/vp_fragments_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </android.support.v4.view.ViewPager>
+
+
+    </LinearLayout>
+
+
+    <FrameLayout
+        android:layout_width="200dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="left"
+        android:background="#000" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="我是侧边栏"
+            android:textColor="#fff" />
+    </FrameLayout>
+
+</android.support.v4.widget.DrawerLayout>
